--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "masa-backend-nodejs",
   "version": "2.0.0",
   "description": "Masa nodejs Backend project",
-  "main": "source/server.ts",
+  "main": "source/index.ts",
   "scripts": {
-    "dev": "nodemon source/server.ts",
-    "build": "rm -rf build/ && prettier --write source/ && tsc",
+    "dev": "nodemon source/index.ts",
+    "build": "tsc --project ./",
     "leap": "mocha ./source/test/leapyear.test.js",
     "leapGET": "mocha ./source/test/getStores.test.js"
   },
@@ -15,16 +15,16 @@
   },
   "author": "Daniil Sizov",
   "license": "ISC",
-  "bugs": {
-    
-  },
+  "bugs": {},
   "homepage": "",
   "dependencies": {
     "@types/axios": "0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "8.5.9",
+    "@types/log4js": "2.3.5",
     "@types/morgan": "1.9.3",
     "@types/mssql": "8.1.1",
     "@types/underscore": "1.11.4",
@@ -33,8 +33,10 @@
     "bcryptjs": "^2.4.3",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "dotenv": "^16.0.3",
     "express": "4.18.1",
     "jsonwebtoken": "8.5.1",
+    "log4js": "^6.7.0",
     "mocha": "^10.0.0",
     "morgan": "1.10.0",
     "msnodesqlv8": "2.6.0",
